[package]
name = "deep_q_network_bindings"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vidur2/dqn_variable_ratio_test"
readme = "README.md"
description = "Provides a generator for a deep q-learning network. Allows for random training intervals, and will be updated to a more stable version later."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.78"
